data/derived/fa15/progs/unify/prog1751.ml.out
Characters 183-184:
  let args = List.combine (List.rev (l1::0)) (List.rev (l2::0)) in
                                         ^
Error: This expression has type int but an expression was expected of type
         'a list
